--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.Micro_Machinery": "Micro Machinery",
   "item.micro_machinery.stone_hammer": "Stone Hammer",
   "item.micro_machinery.bronze_hammer": "Bronze Hammer",
   "item.micro_machinery.iron_hammer": "Iron Hammer",
