--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.Micro_Machinery": "微型机械",
   "item.micro_machinery.stone_hammer": "石锤",
   "item.micro_machinery.bronze_hammer": "青铜锤",
   "item.micro_machinery.iron_hammer": "铁锤",
