--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -369,8 +369,8 @@
   "block.micro_machinery.pigiron_anvil": "Iron Anvil",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
-  "advancement.micro_machinery.root": "HAMMER!",
-  "advancement.micro_machinery.root.desc": "make a stone hammer",
+  "advancement.micro_machinery.root": "Micro Machinery",
+  "advancement.micro_machinery.root.desc": "start with the stone hammer",
   "advancement.micro_machinery.ingot_copper": "Copper is being smelted",
   "advancement.micro_machinery.ingot_copper.desc": "get a copper ingot",
   "advancement.micro_machinery.stone_anvil": "Strike it",
