--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -369,8 +369,8 @@
   "block.micro_machinery.pigiron_anvil": "铸铁砧",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
-  "advancement.micro_machinery.root": "玩个锤子！",
-  "advancement.micro_machinery.root.desc": "制作一个石锤",
+  "advancement.micro_machinery.root": "微型机械",
+  "advancement.micro_machinery.root.desc": "一切从石锤开始",
   "advancement.micro_machinery.ingot_copper": "正在炼铜",
   "advancement.micro_machinery.ingot_copper.desc": "获得一块铜锭",
   "advancement.micro_machinery.stone_anvil": "敲敲打打",
