--- a/src/main/resources/assets/micro_machinery/lang/en_us.json
+++ b/src/main/resources/assets/micro_machinery/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.micro_machinery.apple_jam_bun": "Apple Jam Bun",
   "item.micro_machinery.golden_apple_drops": "Golden Apple Drops",
   "item.micro_machinery.golden_apple_jam_bun": "Golden Apple Jam Bun",
+  "item.micro_machinery.prospector": "Prospector's Pickaxe",
   "item.micro_machinery.laser_drill": "Laser Drill",
   "item.micro_machinery.ingot_aluminum": "Aluminum Ingot",
   "item.micro_machinery.ingot_bronze": "Bronze Ingot",
@@ -369,6 +370,11 @@
   "block.micro_machinery.pigiron_anvil": "Iron Anvil",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
+  "micro_machinery.notify.no_feedback": "no feedback",
+  "micro_machinery.notify.weakest_feedback": "weakest feedback down here",
+  "micro_machinery.notify.weak_feedback": "weak feedback down here",
+  "micro_machinery.notify.obvious_feedback": "obvious feedback down here",
+  "micro_machinery.notify.strong_feedback": "strong feedback down here",
   "advancement.micro_machinery.root": "Micro Machinery",
   "advancement.micro_machinery.root.desc": "start with the stone hammer",
   "advancement.micro_machinery.ingot_copper": "Copper is being smelted",
