--- a/src/main/resources/assets/micro_machinery/lang/zh_cn.json
+++ b/src/main/resources/assets/micro_machinery/lang/zh_cn.json
@@ -14,6 +14,7 @@
   "item.micro_machinery.apple_jam_bun": "苹果酱面包",
   "item.micro_machinery.golden_apple_drops": "金苹果糖",
   "item.micro_machinery.golden_apple_jam_bun": "金苹果酱面包",
+  "item.micro_machinery.prospector": "勘矿镐",
   "item.micro_machinery.laser_drill": "激光钻头",
   "item.micro_machinery.ingot_aluminum": "铝锭",
   "item.micro_machinery.ingot_bronze": "青铜锭",
@@ -369,6 +370,11 @@
   "block.micro_machinery.pigiron_anvil": "铸铁砧",
   "gui.fluid.name": "%s",
   "gui.fluid.amount": "%d mB/%d mB",
+  "micro_machinery.notify.no_feedback": "毫无反馈",
+  "micro_machinery.notify.weakst_feedback": "下方有微弱反馈",
+  "micro_machinery.notify.weak_feedback": "下方有较弱反馈",
+  "micro_machinery.notify.obvious_feedback": "下方有明显反馈",
+  "micro_machinery.notify.strong_feedback": "下方有强烈反馈",
   "advancement.micro_machinery.root": "微型机械",
   "advancement.micro_machinery.root.desc": "一切从石锤开始",
   "advancement.micro_machinery.ingot_copper": "正在炼铜",
